@@ -60,8 +60,11 @@ class ApiLogin extends ApiBase {
 			'wpPassword' => $params['password'],
 			'wpDomain' => $params['domain'],
 			'wpLoginToken' => $params['token'],
-			'wpRemember' => ''
 		) );
+
+		if ( $params['rememberme'] ) {
+			$req['wpRemember'] = '';
+		}
 
 		// Init session if necessary
 		if ( session_id() == '' ) {
@@ -168,6 +171,10 @@ class ApiLogin extends ApiBase {
 			'password' => null,
 			'domain' => null,
 			'token' => null,
+			'rememberme'  => array(
+				ApiBase::PARAM_TYPE => 'boolean',
+				ApiBase::PARAM_DFLT => true,
+			),
 		);
 	}
 
@@ -177,6 +184,7 @@ class ApiLogin extends ApiBase {
 			'password' => 'Password',
 			'domain' => 'Domain (optional)',
 			'token' => 'Login token obtained in first request',
+			'rememberme' => 'Make the cookies persistant'
 		);
 	}
 
