@@ -99,6 +99,8 @@ production.
 * (bug 28897) rvparse doesn’t seem to work with rvsection
 * (bug 25734) API: possible issue with revids validation
 * (bug 28002) Internal error in ApiFormatRaw::getMimeType
+* (bug 26597) Allow toggling of persistent cookies ("remember me") in API
+  action=login
 
 === Languages updated in 1.19 ===
 
